--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>first project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="tammplateOne.css">
+    <link rel="stylesheet" href="templateOne.css">
 </head>
 <body>
   <div class="containerProject">
@@ -49,7 +49,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut lab</p>
       </div>
       <div class="featuers2">
-        <i class="far fa-gem fa-x"></i>
+        <i class="far fa-gem fa-3x"></i>
         <h2>We Will Do All The Work</h2>
         <p>Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit, sed do eiusmod tempor<br> incididunt ut lab</p>
       </div>
@@ -70,14 +70,14 @@
       <div class="content-services content-section">
         <div class="col">
           <div class="section1">
-            <i class="fas fa-magic fa-3x"></i>
+            <i class="fas fa-palette fa-2x"></i>
             <div class="ser">
               <h3> Graphic Design </h3>
               <p> Graphic design is the process of visual communication and problem-solving using one or more of typography, photography and illustration. </p>
             </div>
           </div>
           <div class="section2">
-            <i class="fas fa-globe-asia fa-3x"></i>
+            <i class="fab fa-sketch fa-2x"></i>
             <div class="ser">
               <h3> UI & UX </h3>
               <p> Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided in the interaction.</p>
@@ -86,14 +86,14 @@
         </div>
         <div class="col">
           <div class="section3">
-            <i class="fas fa-magic fa-3x"></i>
+            <i class="fas fa-vector-square fa-2x"></i>
             <div class="ser">
               <h3> Web Design</h3>
               <p> Web design encompasses many different skills and disciplines in the production and maintenance of websites. </p>
             </div>
           </div>
           <div class="section4">
-            <i class="fas fa-globe-asia fa-3x"></i>
+            <i class="fas fa-pencil fa-2x"></i>
             <div class="ser">
               <h3> Web Development </h3>
               <p> Web development is a broad term for the work involved in developing a web site for the Internet or an intranet.</p>
@@ -181,6 +181,6 @@
 <!-- </div> -->
 </section>
 </div>
-<script src="tamplateOne.js"></script>
+<script src="templateOne.js"></script>
 </body>
 </html>
